# Polyfit_CLion

./: CMakeLists.txt  DBest.h  EntropyHistogram.h  FITingTree.h  ICTAI1997.h  MethodTesting.h  MultiResolutionTree.h  PGM.h  Polyfit.h  Polyfit2D.h  Polyfit_1D.h  Polyfit_2D.h  RMI.h  RadixSpline.h  S2Sampling.h  SWAB.h  SimpleRTree.h  VerdictDB.h  aRtree.h  experiments.h  main.cpp  test.h  utils.h
